tests/errors/alfa/semantic_error1.alfa
//****Error semantico en lin X: Declaracion duplicada.
main
{
    int x, y ;

    boolean x;
    x=0;
}    